# ExTL

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
ExTL/include/extl/expected/: expected.hpp  inplace.hpp  unexpected.hpp
ExTL/include/extl/utility/: type_traits.hpp
include/ExTL/: allocator.h  breakpoint.h  expected.h
include/memory/: in_place.hpp  lifecycle.hpp
include/result/: result.hpp  status.hpp
test/: CMakeLists.txt  Test.cpp  main.cpp
test/expected/: expected.cpp
test/result/: status.cpp
